# fitcopilot

./: .env.example  pyproject.toml
data/: app.db
src/fitcopilot/app/bootstrap/: container.py
src/fitcopilot/app/cli/: main.py
src/fitcopilot/app/cli/commands/: body_profile.py  catalog.py  recipes.py  requirements.py  system.py
src/fitcopilot/config/: settings.py
src/fitcopilot/infrastructure/db/: init_db.py  session.py
src/fitcopilot/modules/body_profile/application/: dto.py
src/fitcopilot/modules/body_profile/domain/: entities.p  repositories.py  value_objects.py
src/fitcopilot/modules/body_profile/infrastructure/: sqlalchemy_models.py  sqlalchemy_repository.py
src/fitcopilot/modules/catalog/application/: dto.py
src/fitcopilot/modules/catalog/domain/: entities.py  repositories.py  value_objects.py
src/fitcopilot/modules/catalog/infrastructure/: sqlalchemy_models.py  sqlalchemy_repository.py
src/fitcopilot/modules/recipes/application/: dto.py
src/fitcopilot/modules/recipes/domain/: entities.py  repositories.py  services.py  value_objects.py
src/fitcopilot/modules/recipes/infrastructure/: sqlalchemy_models.py  sqlalchemy_repository.py
src/fitcopilot/modules/requirements/application/: dto.py
tests/unit/ai/: test_ollama_schemas.py
tests/unit/body_profile/: test_create_body_profile.py  test_value_objects.py
tests/unit/recipes/: test_create_recipe.py  test_generate_recipe_with_ai.py  test_nutrition_calculator.py
tests/unit/requirements/: test_calculate_requirements.py  test_services.py
(+17 files in other folders)
