[project]
name = "fitcopilot"
version = "0.1.0"
description = "Local-first fitness recipe copilot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]

[project.scripts]
fitcopilot = "fitcopilot.app.cli.main:app"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
